--- a/DMS/src/RocketGUI.form
+++ b/DMS/src/RocketGUI.form
@@ -6,6 +6,8 @@
       <xy x="1" y="6" width="500" height="551"/>
     </constraints>
     <properties>
+      <background color="-14735824"/>
+      <foreground color="-13947600"/>
       <maximumSize width="500" height="300"/>
       <minimumSize width="500" height="300"/>
     </properties>
@@ -16,7 +18,10 @@
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-14735824"/>
+          <foreground color="-13947600"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="3ceb9" class="javax.swing.JButton" binding="AddButton">
@@ -24,6 +29,9 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13551550"/>
+              <font name="Nasalization"/>
+              <foreground color="-4926738"/>
               <text value="Add"/>
               <toolTipText value="Adds the Information ablove to the database"/>
             </properties>
@@ -33,6 +41,9 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13551550"/>
+              <font name="Nasalization" style="0"/>
+              <foreground color="-4926738"/>
               <text value="File Add"/>
             </properties>
           </component>
@@ -43,7 +54,10 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-14735824"/>
+          <foreground color="-13947600"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="ff555" class="javax.swing.JLabel" binding="IDLabel">
@@ -51,6 +65,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-4926738"/>
               <text value="Launch ID"/>
             </properties>
           </component>
@@ -59,6 +74,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-4926738"/>
               <text value="Launch Provider"/>
             </properties>
           </component>
@@ -67,6 +83,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-4926738"/>
               <text value="launch Location"/>
             </properties>
           </component>
@@ -75,6 +92,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-4926738"/>
               <text value="Launch Vehicle"/>
             </properties>
           </component>
@@ -83,6 +101,7 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-4926738"/>
               <text value="Launch Date"/>
             </properties>
           </component>
@@ -91,6 +110,7 @@
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-4926738"/>
               <text value="Number of Crew"/>
               <toolTipText value=""/>
             </properties>
@@ -100,6 +120,7 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-4926738"/>
               <text value="Payload"/>
             </properties>
           </component>
@@ -108,6 +129,7 @@
               <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-4926738"/>
               <text value="Tonnage to Orbit"/>
             </properties>
           </component>
@@ -121,7 +143,9 @@
             <maximum-size width="250" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-14735824"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="63d94" class="javax.swing.JTextField" binding="IDTF">
@@ -132,6 +156,7 @@
             </constraints>
             <properties>
               <enabled value="true"/>
+              <font name="Arial" size="14" style="1"/>
               <text value=""/>
               <toolTipText value="Enter the Launch ID"/>
             </properties>
@@ -143,6 +168,7 @@
               </grid>
             </constraints>
             <properties>
+              <font name="Arial" size="14" style="1"/>
               <toolTipText value="Enter the Launch Provider"/>
             </properties>
           </component>
@@ -153,6 +179,7 @@
               </grid>
             </constraints>
             <properties>
+              <font name="Arial" size="14" style="1"/>
               <toolTipText value="Enter the Launch Location"/>
             </properties>
           </component>
@@ -163,6 +190,7 @@
               </grid>
             </constraints>
             <properties>
+              <font name="Arial" size="14" style="1"/>
               <toolTipText value="Enter the Launch Vehical"/>
             </properties>
           </component>
@@ -173,6 +201,7 @@
               </grid>
             </constraints>
             <properties>
+              <font name="Arial" size="14" style="1"/>
               <toolTipText value="Enter the Launch Date"/>
             </properties>
           </component>
@@ -183,6 +212,7 @@
               </grid>
             </constraints>
             <properties>
+              <font name="Arial" size="14" style="1"/>
               <toolTipText value="Enter the number of crew or 0"/>
             </properties>
           </component>
@@ -193,6 +223,7 @@
               </grid>
             </constraints>
             <properties>
+              <font name="Arial" size="14" style="1"/>
               <toolTipText value="Enter the Payload"/>
             </properties>
           </component>
@@ -203,6 +234,7 @@
               </grid>
             </constraints>
             <properties>
+              <font name="Arial" size="14" style="1"/>
               <toolTipText value="Enter the Tonnage launched to orbit"/>
             </properties>
           </component>
@@ -213,7 +245,10 @@
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-14735824"/>
+          <foreground color="-14735824"/>
+        </properties>
         <border type="none"/>
         <children>
           <scrollpane id="6f460">
@@ -222,13 +257,22 @@
                 <minimum-size width="600" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-14735824"/>
+              <foreground color="-13551550"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="7ca2c" class="javax.swing.JTable" binding="DataTable">
                 <constraints/>
                 <properties>
+                  <background color="-13551550"/>
+                  <foreground color="-4926738"/>
+                  <gridColor color="-13551550"/>
+                  <intercellSpacing width="5" height="1"/>
                   <minimumSize width="600" height="40"/>
+                  <rowHeight value="25"/>
+                  <selectionForeground color="-13551550"/>
                 </properties>
               </component>
             </children>
@@ -240,14 +284,19 @@
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-14735824"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="6ec97" class="javax.swing.JButton" binding="TonnagaCal">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13551550"/>
+              <font name="Nasalization"/>
+              <foreground color="-4926738"/>
               <text value="Calcluate Tonnage"/>
             </properties>
           </component>
@@ -256,6 +305,9 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13551550"/>
+              <font name="Nasalization"/>
+              <foreground color="-4926738"/>
               <text value="Up Date Row"/>
             </properties>
           </component>
@@ -264,6 +316,9 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13551550"/>
+              <font name="Nasalization"/>
+              <foreground color="-4926738"/>
               <text value="Delete"/>
             </properties>
           </component>
