--- a/DMS/src/RocketGUI.form
+++ b/DMS/src/RocketGUI.form
@@ -41,6 +41,7 @@
                 <properties>
                   <background color="-14735824"/>
                   <enabled value="true"/>
+                  <font size="18" style="1"/>
                   <foreground color="-1"/>
                 </properties>
                 <border type="none"/>
@@ -91,20 +92,22 @@
                   <grid id="96c0f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
+                      <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-14735824"/>
+                      <font/>
                       <foreground color="-14735824"/>
                     </properties>
                     <border type="none"/>
                     <children>
-                      <component id="11f12" class="javax.swing.JLabel" binding="DBConnectedImageLabel">
+                      <component id="11f12" class="javax.swing.JLabel" binding="DBConnectedLabel">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <enabled value="true"/>
+                          <font size="16" style="1"/>
                           <foreground color="-4926738"/>
                           <text value=""/>
                           <toolTipText value="displays connetion status"/>
@@ -276,7 +279,7 @@
           <background color="-14735824"/>
           <enabled value="true"/>
           <foreground color="-14735824"/>
-          <visible value="true"/>
+          <visible value="false"/>
         </properties>
         <border type="none"/>
         <children>
